# transformer_clm_bench

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-31-meaningful-benchmark-preset.md  2026-03-31-transformer-clm-bench.md
docs/superpowers/specs/: 2026-03-31-transformer-clm-bench-design.md
results/: benchmark_report.md  benchmark_report_compact.md  benchmark_report_meaningful.md  benchmark_summary.json  benchmark_summary_compact.json  benchmark_summary_meaningful.json
scripts/: run_benchmark.py
src/transformer_clm_bench/: __init__.py  benchmark.py  config.py  data.py  modeling.py  training.py
tests/: test_config.py  test_data.py  test_models.py  test_training.py
